Change the management of state in sales orders and purchase orders
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1670 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_order.html.haml
+++ b/app/views/management/sales_order.html.haml
@@ -31,7 +31,7 @@
 
 -if ["products", ""].include? params[:step].to_s
   %h2=SalesOrder.human_attribute_name("lines")
-  -#@sales_order_line = @sales_order.lines.new
+  -@sales_order_line = @sales_order.lines.new
   -if @sales_order.estimate?
     =toolbar do |t|
       -t.link(:sales_order_line_create, :order_id=>@sales_order.id) 
