--- a/app/views/management/outgoing_payment.html.haml
+++ b/app/views/management/outgoing_payment.html.haml
@@ -4,7 +4,7 @@
 =list_evalue do |l|
   -l.evalue @outgoing_payment, :number
   -l.evalue @outgoing_payment, :amount
-  -l.evalue @outgoing_payment, :parts_amount
+  -l.evalue @outgoing_payment, :used_amount
   -l.evalue @outgoing_payment, :payee, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
   -l.evalue @outgoing_payment, :responsible, :label=>:label
   -l.evalue @outgoing_payment, :mode
@@ -20,6 +20,6 @@
       =render :partial=>'outgoing_payment_use_create'
       .actions=submit_tag
 
--if @outgoing_payment.parts.size>0
+-if @outgoing_payment.uses.size>0
   %h2=tc(:purchase_orders)
   =kame :outgoing_payment_purchase_orders
