--- a/public/themes/tekyla/stylesheets/kame.css
+++ b/public/themes/tekyla/stylesheets/kame.css
@@ -5,7 +5,7 @@ table.kame tbody, table.kame thead th { border: 1px solid #95b0e4;} /* BACFE6 */
 /*table.kame th { background: #e9f3fe url(../images/table_head.png) repeat-x bottom; padding:3px; color: #000; font-weight: normal; }*/
 /*table.kame thead th { border: 1px solid #BACFE6; }*/
 table.kame th { background: #e0e7f9 url(../images/shadow-top.png) repeat-x bottom; padding: 2px; color: #000; font-weight: normal; }
-table.kame th.act { background-color: #F1D7C9; }
+table.kame th.act { background-color: #F1D7C9; width:16px; text-align: center; }
 html[dir="ltr"] table.kame th { text-align: left; }
 html[dir="rtl"] table.kame th { text-align: right; }
 table.kame thead th a { display: block; text-decoration:none; color: #000; padding: 1px; background-position: right center; background-repeat: no-repeat; }
@@ -22,7 +22,7 @@ table.kame tr td {border-top: 1px solid #E2E2EE;}
 table.kame tr:first-child td {border-top: none;}
 table.kame tr      td {padding: 0px 4px;color: #000; height:22px;}
 table.kame tr      td.chk { text-align:center }
-table.kame tr      td.act { padding: 0 1px; width:18px; }
+table.kame tr      td.act { padding: 0 2px; width:16px; }
 table.kame tr      td.act a {padding: 1px; margin: 0; display:block; text-align: center;}
 table.kame tr      td.act a img {padding: 0; margin: 0; display:block; border: none;}
 table.kame tr.child td { color: #77A; }
