--- a/app/views/management/_purchase_order_form.html.haml
+++ b/app/views/management/_purchase_order_form.html.haml
@@ -5,9 +5,10 @@
   -f.title :infos
   -if @purchase_order.updatable?
     -f.field :purchase_order, :supplier_id, :choices=>:suppliers, :new=>{:controller=>:relations, :action=>:entity_create}
-    -f.field :purchase_order, :dest_contact_id, :choices=>{:reflection=>:self_contacts, :label=>:address}, :new=>{:controller=>:relations, :action=>:contact_create, :entity_id=>@current_company.entity_id}
+    -f.field :purchase_order, :delivery_contact_id, :choices=>{:reflection=>:self_contacts, :label=>:address}, :new=>{:controller=>:relations, :action=>:contact_create, :entity_id=>@current_company.entity_id}
     -f.field :purchase_order, :planned_on
     -f.field :purchase_order, :reference_number
+    -f.field :purchase_order, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
   -f.field :purchase_order, :comment, :field=>:textarea
 
 
