--- a/app/views/management/sales_order.html.haml
+++ b/app/views/management/sales_order.html.haml
@@ -13,6 +13,8 @@
 
 =list_evalue do |l|
   -l.evalue @sales_order, :client, :label=>:label, :url=>{:controller=>:relations, :action=>:entity}
+  -l.evalue @sales_order, :number
+  -l.evalue @sales_order, :state_label
   -l.evalue @sales_order, :responsible, :label=>:full_name
   -l.evalue @sales_order, :created_on
   -l.evalue @sales_order, :confirmed_on
@@ -23,6 +25,7 @@
   -l.evalue @sales_order, :contact, :label=>:address
   -l.evalue @sales_order, :delivery_contact, :label=>:address
   -l.evalue @sales_order, :invoice_contact, :label=>:address
+  -l.evalue @sales_order, :letter_format
   -if @sales_order.letter_format?
     -l.evalue @sales_order, :subject
     -l.evalue @sales_order, :function_title
