--- a/app/views/accountancy/journal.html.haml
+++ b/app/views/accountancy/journal.html.haml
@@ -4,12 +4,12 @@
   -t.link :journal_entry_create, :journal_id=>@journal.id
 
 
-=list_evalue(3) do |l|
-  -l.evalue @journal, :name
-  -l.evalue @journal, :code
-  -l.evalue @journal, :nature_label
-  -l.evalue @journal, :currency
-  -l.evalue @journal, :closed_on
+=attributes_list(@journal) do |l|
+  -l.attribute :name
+  -l.attribute :code
+  -l.attribute :nature_label
+  -l.attribute :currency
+  -l.attribute :closed_on
 
 .search
   =form_tag({}, :method=>:get) do
