--- a/app/views/management/incoming_payment.html.haml
+++ b/app/views/management/incoming_payment.html.haml
@@ -2,24 +2,24 @@
   -t.update @incoming_payment
 
 
-=list_evalue(3) do |l|
-  -l.evalue @incoming_payment, :number
-  -l.evalue @incoming_payment, :amount
-  -l.evalue @incoming_payment, :used_amount
-  -l.evalue @incoming_payment, :payer, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
-  -l.evalue @incoming_payment, :responsible, :label=>:label
-  -l.evalue @incoming_payment, :deposit, :url=>{:action=>:deposit}
-  -l.evalue @incoming_payment, :mode
-  -l.evalue @incoming_payment, :commission_amount
-  -l.evalue @incoming_payment, :commission_account, :url=>{:controller=>:accountancy, :action=>:account}
-  -l.evalue @incoming_payment, :paid_on
-  -l.evalue @incoming_payment, :to_bank_on 
-  -l.evalue @incoming_payment, :received
-  -l.evalue @incoming_payment, :scheduled
-  -l.evalue @incoming_payment, :bank
-  -l.evalue @incoming_payment, :account_number
-  -l.evalue @incoming_payment, :check_number
-  -l.evalue @incoming_payment, :journal_entry, :url=>{:controller=>:accountancy, :action=>:journal_entry}
+=attributes_list(@incoming_payment) do |l|
+  -l.attribute :number
+  -l.attribute :amount
+  -l.attribute :used_amount
+  -l.attribute :payer, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
+  -l.attribute :responsible, :label=>:label
+  -l.attribute :deposit, :url=>{:action=>:deposit}
+  -l.attribute :mode
+  -l.attribute :commission_amount
+  -l.attribute :commission_account, :url=>{:controller=>:accountancy, :action=>:account}
+  -l.attribute :paid_on
+  -l.attribute :to_bank_on 
+  -l.attribute :received
+  -l.attribute :scheduled
+  -l.attribute :bank
+  -l.attribute :account_number
+  -l.attribute :check_number
+  -l.attribute :journal_entry, :url=>{:controller=>:accountancy, :action=>:journal_entry}
 
 -if @incoming_payment.uses.size>0
   -if SalesOrder.find(:all, :conditions=>["sales_orders.company_id=? AND id IN (SELECT expense_id FROM incoming_payment_uses WHERE payment_id=? AND expense_type=?)", @current_company.id, session[:current_payment_id], SalesOrder.name]).size > 0
