--- a/app/views/management/outgoing_payment.html.haml
+++ b/app/views/management/outgoing_payment.html.haml
@@ -1,17 +1,17 @@
 =toolbar do |t|
   -t.update @outgoing_payment
 
-=list_evalue do |l|
-  -l.evalue @outgoing_payment, :number
-  -l.evalue @outgoing_payment, :amount
-  -l.evalue @outgoing_payment, :used_amount
-  -l.evalue @outgoing_payment, :payee, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
-  -l.evalue @outgoing_payment, :responsible, :label=>:label
-  -l.evalue @outgoing_payment, :mode
-  -l.evalue @outgoing_payment, :paid_on
-  -l.evalue @outgoing_payment, :to_bank_on
-  -l.evalue @outgoing_payment, :check_number
-  -l.evalue @outgoing_payment, :journal_entry, :url=>{:controller=>:accountancy, :action=>:journal_entry}
+=attributes_list(@outgoing_payment) do |l|
+  -l.attribute :number
+  -l.attribute :amount
+  -l.attribute :used_amount
+  -l.attribute :payee, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
+  -l.attribute :responsible, :label=>:label
+  -l.attribute :mode
+  -l.attribute :paid_on
+  -l.attribute :to_bank_on
+  -l.attribute :check_number
+  -l.attribute :journal_entry, :url=>{:controller=>:accountancy, :action=>:journal_entry}
 
 -if false # @outgoing_payment.unused_amount > 0
   =form_tag(:action=>:outgoing_payment_use_create) do
