Fixes a bug on sum computation
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1676 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_incoming_delivery_form.html.haml
+++ b/app/views/management/_incoming_delivery_form.html.haml
@@ -10,8 +10,8 @@
 %table.kame 
   %tr
     %th=IncomingDeliveryLine.human_attribute_name(:product)
-    %th=tc(:line_amount)
-    %th=tc(:line_amount_with_taxes)
+    %th=tc(:unit_price_amount)
+    %th=tc(:unit_price_amount_with_taxes)
     %th=tc(:total_quantity)
     %th=IncomingDeliveryLine.human_attribute_name(:unit)
     %th=tc(:quantity_rest)
