--- a/app/views/management/_outgoing_delivery_form.html.haml
+++ b/app/views/management/_outgoing_delivery_form.html.haml
@@ -11,8 +11,8 @@
 %table.kame 
   %tr
     %th=OutgoingDeliveryLine.human_attribute_name(:product)
-    %th=tc(:line_amount)
-    %th=tc(:line_amount_with_taxes)
+    %th=tc(:unit_price_amount)
+    %th=tc(:unit_price_amount_with_taxes)
     %th=tc(:total_quantity)
     %th=OutgoingDeliveryLine.human_attribute_name(:unit)
     %th=tc(:quantity_rest)
