Fixes last bugs and translation for 0.3.0.alpha2
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1679 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/user_statistics.html.haml
+++ b/app/views/company/user_statistics.html.haml
@@ -9,7 +9,7 @@
         %td=submit_tag tg(:search_go)
 .menu
   %ul
-    %li=tc(:nb_sales, :count=>@sales_orders_count)
+    %li=tc(:x_sales_orders, :count=>@sales_orders_count)
     -if @sales_orders_count > 0
       %li=tc(:total_amount)+@sales_orders_amount.to_s
       %li=tc(:total_invoiced_amount)+@invoiced_amount.to_s
