--- a/app/views/accountancy/index.html.haml
+++ b/app/views/accountancy/index.html.haml
@@ -1,7 +1,7 @@
 .menu.indicator
   %h2= tg('indicator')
   %ul
-    =li_link_to tc(:nb_entries, :count=>@current_company.journal_entries.count), :action=>:journals
+    =li_link_to tc(:x_journal_entries, :count=>@current_company.journal_entries.count), :action=>:journals
 
 %h2=tl :journals
 =journals_tag
