--- a/app/views/management/sales_invoices.html.haml
+++ b/app/views/management/sales_invoices.html.haml
@@ -1,4 +1,4 @@
-.count=#tc(:nb_sales_invoices, :count=>@current_company.sales_invoices.size)
+.count=#tc(:x_sales_invoices, :count=>@current_company.sales_invoices.size)
 
 =render :partial=>'sales_invoices_search'
 
