--- a/app/views/production/index.html.haml
+++ b/app/views/production/index.html.haml
@@ -1,4 +1,4 @@
 .menu.indicator
   %h2= tc('indicator')
   %ul
-    %li= link_to tc('nb_operations', :count=>@operations.size), :action=>:unvalidated_operations
+    %li= link_to tc('x_performed_operations', :count=>@operations.size), :action=>:unvalidated_operations
